# lab2_learning

./: CMakeLists.txt  README.md
lab2_lib/: CMakeLists.txt  library.cpp  library.h
lab2_main/: CMakeLists.txt  _gets.h  main.cpp  prints.cpp  prints.h
lab2_tests/: CMakeLists.txt  tests.cpp
